{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 188,
  "lineage": "ed39991e-ae43-20e1-749e-81431a5e0ce9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08228eb458bdaa707",
            "association_id": "eipassoc-0be395d28fdcbbd20",
            "domain": "vpc",
            "id": "eipalloc-08228eb458bdaa707",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a1db7a83730fec6f",
            "private_dns": "ip-10-0-0-11.us-east-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-18-220-94-28.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.94.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT"
            },
            "tags_all": {
              "Name": "EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:862066027316:instance/i-05550c20c2d84e261",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05550c20c2d84e261",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ece5af0461197840",
            "private_dns": "ip-10-0-0-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.12",
            "public_dns": "ec2-3-133-147-77.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.147.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0127248d750bdd74f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040ff4fa22e896338",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8394712db786d5f"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:internet-gateway/igw-07508ca0da0da1b03",
            "id": "igw-07508ca0da0da1b03",
            "owner_id": "862066027316",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-05aa3e725ddac6876"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "First_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08228eb458bdaa707",
            "association_id": "eipassoc-0be395d28fdcbbd20",
            "connectivity_type": "public",
            "id": "nat-04b09c111a9749ad1",
            "network_interface_id": "eni-0a1db7a83730fec6f",
            "private_ip": "10.0.0.11",
            "public_ip": "18.220.94.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040ff4fa22e896338",
            "tags": {
              "Name": "1stNATGateway"
            },
            "tags_all": {
              "Name": "1stNATGateway"
            }
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-08a5a70159475080b",
            "id": "rtb-08a5a70159475080b",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b09c111a9749ad1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa3e725ddac6876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-04af26baa539f37b3",
            "id": "rtb-04af26baa539f37b3",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07508ca0da0da1b03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b09c111a9749ad1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa3e725ddac6876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_internet_gateway.first_igw",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8c1823fc66c681",
            "route_table_id": "rtb-08a5a70159475080b",
            "subnet_id": "subnet-0d1c549085c86a9da"
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_nat_gateway.First_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106c3f769ccb22f7",
            "route_table_id": "rtb-04af26baa539f37b3",
            "subnet_id": "subnet-040ff4fa22e896338"
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_internet_gateway.first_igw",
            "aws_nat_gateway.First_nat_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-0d1c549085c86a9da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1c549085c86a9da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-05aa3e725ddac6876"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-040ff4fa22e896338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040ff4fa22e896338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-05aa3e725ddac6876"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My1stVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:vpc/vpc-05aa3e725ddac6876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047d04244cc29be46",
            "default_route_table_id": "rtb-04b64b34c49cc8814",
            "default_security_group_id": "sg-0c8394712db786d5f",
            "dhcp_options_id": "dopt-0a88cb5f54225e1b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05aa3e725ddac6876",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b64b34c49cc8814",
            "owner_id": "862066027316",
            "tags": {
              "Name": "My1stVPC"
            },
            "tags_all": {
              "Name": "My1stVPC"
            }
          }
        }
      ]
    }
  ]
}